samples/_failures_safe/1761081160_ac0bd0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1476ac42.c: In function ‘main’:
./samples/SAFE/__tmp_1476ac42.c:162:17: error: expected declaration or statement at end of input
  162 |                 break;
      |                 ^~~~~
./samples/SAFE/__tmp_1476ac42.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1476ac42.c:162:17: error: expected declaration or statement at end of input
